--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.2",
     "@highcharts/map-collection": "^2.3.2",
     "@lottiefiles/dotlottie-react": "^0.17.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.5.0",
@@ -37,6 +39,7 @@
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "three": "^0.182.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
